@@ -94,8 +94,8 @@
     misc/cursor.pcf.gz
     TTF/bengali/MuktiNarrow.ttf
     TTF/dejavu/DejaVuSans.ttf
-    TTF/dejavu/DejaVuSansBold.ttf
-    TTF/dejavu/DejaVuSansBoldOblique.ttf
+    TTF/dejavu/DejaVuSans-Bold.ttf
+    TTF/dejavu/DejaVuSans-BoldOblique.ttf
     TTF/devanagari/raghu.ttf
     TTF/gurmukhi/lohit_pa.ttf
     TTF/thai/norasi_n.ttf
@@ -132,7 +132,6 @@
   /etc/mke2fs.conf
   /etc/fonts/fonts.conf
   /etc/protocols
-  /etc/rpm/platform
   /etc/rpm/macros.cdb
   /LIB/udev/usb_id
   /usr/LIB/xserver/SecurityPolicy
