@@ -1,3 +1,6 @@
+- adapt to cooker:
+  o DejaVuSans-Bold*.ttf instead of DejaVuSansBold*.ttf (again!)
+  o no more /etc/rpm/platform (for rpm 4.4.2.2)
 - install SMP packages when "match_all_hardware" option is set
 
 Version 10.6.1 - 12 December 2007, by Pascal "Pixel" Rigaux
